[gd_scene load_steps=14 format=2]

[ext_resource path="res://ndh-assets/UI/map/mission_scroll/side_scroll.png" type="Texture" id=1]
[ext_resource path="res://src/UI/menu/map/MissionScrollPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/dynamic/november_size12.tres" type="DynamicFont" id=3]
[ext_resource path="res://ndh-assets/UI/map/mission_place/city_selected.png" type="Texture" id=4]
[ext_resource path="res://ndh-assets/UI/map/mission_scroll/mission_frame.png" type="Texture" id=5]
[ext_resource path="res://ndh-assets/UI/map/mission_scroll/passed_stamp_overlay.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/dynamic/november_size32.tres" type="DynamicFont" id=7]
[ext_resource path="res://ndh-assets/UI/map/go_button.png" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="MissionScrollPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 700.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 51.0
margin_top = 120.0
margin_right = -49.0
margin_bottom = -120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 460.0
margin_bottom = 32.0

[node name="MissionNameLabel" type="Label" parent="VBoxContainer/TitleContainer"]
margin_right = 460.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.439216, 0.137255, 0.0392157, 1 )
text = "\"Mission name\""
align = 1
valign = 1

[node name="PlaceContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 460.0
margin_bottom = 76.0
size_flags_horizontal = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PlaceContainer"]
margin_left = 118.0
margin_right = 148.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="PlaceDescriptionLabel" type="Label" parent="VBoxContainer/PlaceContainer"]
margin_left = 152.0
margin_top = 8.0
margin_right = 341.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.439216, 0.137255, 0.0392157, 1 )
text = "Mission place, region"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 460.0
margin_bottom = 258.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/ScrollContainer"]
margin_right = 460.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.490196, 0.0392157, 0.0392157, 1 )
text = "Mission description"
autowrap = true

[node name="BottomContainer" type="Control" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 460.0
margin_bottom = 440.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MissionGoalBackground" type="TextureRect" parent="VBoxContainer/BottomContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BottomContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 90.0
margin_bottom = 100.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionLabel" type="Label" parent="VBoxContainer/BottomContainer/VBoxContainer"]
margin_right = 117.0
margin_bottom = 27.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.439216, 0.137255, 0.0392157, 1 )
text = "Mission:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionGoalLabel" type="Label" parent="VBoxContainer/BottomContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 117.0
margin_bottom = 80.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.439216, 0.137255, 0.0392157, 1 )
text = "Mission goal!
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoButton" type="Button" parent="VBoxContainer/BottomContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -169.0
margin_top = 37.0
margin_right = -25.0
margin_bottom = -38.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompletedTexture" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 6 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
